--- a/assignment1/code/README
+++ b/assignment1/code/README
@@ -28,8 +28,9 @@ for lbd in 0.001 0.002 0.003 0.004 0.005 0.007 0.01; do nohup condor_run "python
 follows 6f) except we are having two layers now 
 EXCEPT THE VARIABLE 
 	stringg=" -hidden_layer_2_dimension 100 "
+EXCEPT
 
-
+for unit in 20 50 100 200 300 400 500; do nohup condor_run "python train.py -lr 0.01 -momentum 0.2 -max_epoch 125 -hidden_layer_1_dimension $unit -hidden_layer_2_dimension $unit"  & done
 
 6h)
 
